--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,21 +1,15 @@
-.Form {
-  overflow: hidden;
+.Card {
   max-width: 450px;
   border-radius: 10px;
-  background-color: #334155;
+  background-color: #94a3b8;
   padding: 10px;
   box-shadow: 3px 3px 5px #000;
   flex-grow: 1;
 }
 
-.Form-header {
+.Card-header {
   text-align: center;
   font-weight: bold;
   font-size: 1.5rem;
-  color: #fff;
-}
-
-.Buttons {
-  display: flex;
-  justify-content: space-between;
+  color: #0f172a;
 }
