--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* https://tailwindcolor.com */
+@import './themes/dark.css';
+@import './themes/light.css';
+
 * {
   box-sizing: border-box;
   font-family: Tahoma, Geneva, sans-serif;
