--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -2,8 +2,8 @@
   --text-color-10: #111827;
   --text-color-20: #334155;
   --text-color-30: #64748b;
-  --background-color-10: #f1f5f9;
-  --background-color-20: #e2e8f0;
-  --background-color-30: #cbd5e1;
-  --background-color-40: #94a3b8;
+  --background-color-10: #e2e8f0;
+  --background-color-20: #cbd5e1;
+  --background-color-30: #94a3b8;
+  --background-color-40: #64748b;
 }
