--- a/src/shared/components/Button/Button.css
+++ b/src/shared/components/Button/Button.css
@@ -1,6 +1,6 @@
 .Button {
-  padding: 10;
-  border-radius: 5;
+  padding: 10px;
+  border-radius: 5px;
   outline: none;
   border: none;
   color: #000;
