--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   min-height: 100vh;
   background-color: var(--background-color-10);
   padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .Container {
-  max-width: 1240px;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 500px;
+  width: 100%;
 }
