--- a/src/components/InputForm/InputForm.css
+++ b/src/components/InputForm/InputForm.css
@@ -7,10 +7,13 @@
 
 .InputForm > .Textarea {
   margin: 0;
-  width: 300px;
+  flex-grow: 1;
 }
 
 .InputForm > .Button {
   margin: 0 0 0 5px;
   width: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
