--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -1,8 +1,14 @@
-.TodoList {
-  margin-top: 20px;
+.Todo {
+  margin: 20px 0;
 }
 
-.TodoList > strong {
+.TodoList {
+  display: flex;
+  flex-direction: column-reverse;
+  margin-top: 5px;
+}
+
+.Todo strong {
   background-color: var(--background-color-30);
   color: var(--text-color-10);
   padding: 10px;
