Fix styles bugs

--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -28,6 +28,9 @@
 }
 
 .TodoItem-success {
-  text-decoration: line-through;
   background-color: #d32f2f;
+}
+
+.TodoItem-success > .TodoItem-text {
+  text-decoration: line-through;
 }
